--- a/location.html
+++ b/location.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>HTML Geolocation</h1>
-<p>Click the button to get your coordinates.</p>
+<h1>GPS</h1>
+<p>Click here to get GPS coordinates.</p>
 
-<button onclick="getLocation()">Try It</button>
+<button onclick="getLocation()">Click Here</button>
 
 <p id="demo"></p>
 
